# mc3d-source

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
dev/: update_changelog.py
developer/: index.html
docs/: developer.md  index.md  myst.yml  topics.md  usage.md
pipeline/: .gitignore  add_extras.py  cli.py  cliSmallQ.py  cliStandardQ.py  cliTodi-2.py  cliTodi.py  cli_bands.py  cli_relax_charge.py  sandbox.ipynb  settingsEiger.yaml  settingsPizDaint.yaml  settingsSmallQ.yaml  settingsStandardQ.yaml  settingsTodi-2.yaml  settingsTodi.yaml  settings_bands.yaml  settings_small_standard.yaml
pipeline/cif_clean/: cli.py  settings.yaml
pipeline/symmetryAnalysis/: Test1.ipynb  Test2.ipynb  sandbox.ipynb
search/: search_index.json
src/mc3d_source/: __init__.py  constants.py
src/mc3d_source/cli/: main.py
src/mc3d_source/cli/commands/: cif_import.py  curate.py  select.py  uniq.py  update.py
src/mc3d_source/cli/commands/analyse/: deprecation.py
src/mc3d_source/cli/run/: __init__.py  select.py  uniq.py
src/mc3d_source/controllers/: cif_clean.py
src/mc3d_source/tools/: source.py
topics/: index.html
usage/: index.html
