[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mc3d-source"
dynamic = ["version"]
description = "Package for the MC3D-source pipeline."
authors = [{name = 'Marnik Bercx', email = 'mbercx@gmail.com'}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ['aiida', 'workflows']
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
    'aiida-core[atomic_tools]~=2.3',
    'typer[all]~=0.9'
]

[project.urls]
Home = 'https://github.com/mbercx/mc3d-source'
Source = 'https://github.com/mbercx/mc3d-source'

[project.scripts]
mc3d = 'mc3d_source.cli.main:app'

[tool.hatch.version]
path = "src/mc3d_source/__about__.py"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material"
]
scripts.build = "mkdocs build --clean --strict"
scripts.serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.envs.precommit]
dependencies = ["pre-commit"]
scripts.install = "pre-commit install"
scripts.run = "pre-commit run {args:--all-files}"
